validate mst/cccd/cmt khi chon loai ky cts

--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -518,7 +518,7 @@
               </div>
 
               <!--trường hiển thị khi người ký tổ chức của tôi chọn loại ký là chứng thư số-->
-              <!-- <div class="participants--input" style="display: flex" *ngIf="getDataSignCert(d).length > 0">
+              <div class="participants--input" style="display: flex" *ngIf="getDataSignCert(d).length > 0">
                 <div class="participants__name" style="width: 91%">
                   <div class="label_detail text-color">{{'tax_code.cardId' | translate}}&nbsp;
                     <span class="required-title">*</span>
@@ -529,7 +529,7 @@
                       oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                   </div>
                 </div>
-              </div> -->
+              </div>
 
             </div>
             <div *ngIf="getOriganzationSignature().length > 1" class="col-md-1 delete-element"
@@ -703,7 +703,7 @@
               </div>
 
               <!--trường hiển thị khi văn thư tổ chức của tôi chọn loại ký là chứng thư số-->
-              <!-- <div class="participants--input" style="display: flex" *ngIf="getDataSignCert(d).length > 0">
+              <div class="participants--input" style="display: flex" *ngIf="getDataSignCert(d).length > 0">
                 <div class="participants__name" style="width: 91%">
                   <div class="label_detail text-color">{{'tax_code.cardId' | translate}}&nbsp;
                     <span class="required-title">*</span>
@@ -714,7 +714,7 @@
                       oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                   </div>
                 </div>
-              </div> -->
+              </div>
 
             </div>
             <div class="col-md-1 delete-element" (click)="deleteOriganzationDocument(index)">
@@ -1323,7 +1323,7 @@
                 </div>
 
                 <!--trường hiển thị khi người ký đối tác chọn loại ký là chứng thư số-->
-                <!-- <div class="participants--input" style="display: flex" *ngIf="getDataSignCert(d).length > 0">
+                <div class="participants--input" style="display: flex" *ngIf="getDataSignCert(d).length > 0">
                   <div class="participants__name" style="width: 91%">
                     <div class="label_detail text-color">{{'tax_code.cardId' | translate}}&nbsp;
                       <span class="required-title">*</span>
@@ -1334,7 +1334,7 @@
                         oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                     </div>
                   </div>
-                </div> -->
+                </div>
 
               </div>
               <div *ngIf="getPartnerSignature(item).length > 1 || getPartnerCoordination(item).length > 0"
@@ -1499,7 +1499,7 @@
                 </div>
 
                 <!--trường hiển thị khi văn thư đối tác chọn loại ký là chứng thư số-->
-                <!-- <div class="participants--input" style="display: flex" *ngIf="getDataSignCert(d).length > 0">
+                <div class="participants--input" style="display: flex" *ngIf="getDataSignCert(d).length > 0">
                   <div class="participants__name" style="width: 91%">
                     <div class="label_detail text-color">{{'tax_code.cardId' | translate}}&nbsp;
                       <span class="required-title">*</span>
@@ -1510,7 +1510,7 @@
                         oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                     </div>
                   </div>
-                </div> -->
+                </div>
 
               </div>
               <div class="col-md-1 delete-element" (click)="deletePartnerDocument(index, item)">
@@ -1780,7 +1780,7 @@
                 </div>
 
                 <!--trường hiển thị khi đối tác là cá nhân chọn loại ký là chứng thư số-->
-                <!-- <div class="participants--input" style="display: flex" *ngIf="getDataSignCert(d).length > 0">
+                <div class="participants--input" style="display: flex" *ngIf="getDataSignCert(d).length > 0">
                   <div class="participants__name" style="width: 91%">
                     <div class="label_detail text-color">{{'tax_code.cardId' | translate}}&nbsp;
                       <span class="required-title">*</span>
@@ -1791,7 +1791,7 @@
                         oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                     </div>
                   </div>
-                </div> -->
+                </div>
 
                 <!--KD-->
                 <div class="participants--input" style="display: flex"
