--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -49,7 +49,18 @@
     </div>
 
     <div style="margin-top: 18px;" class="row list_header" *ngIf="pageTotal > 0 || (this.typeDisplay == 'signMany' || this.typeDisplay == 'viewMany')">
-
+        <div 
+            *ngIf="this.typeDisplay === 'signMany' && this.contractsSignMany?.length == 50" 
+            style="
+            text-align: left;
+            color: #027e21;
+            font-size: 14px;
+            margin-left: 9px;
+            font-weight: bold;"
+        
+        >
+            {{'multi.sign.warning' | translate}}
+        </div>
         <div class="col-md-5"></div>
         <div class="col-md-2">{{'create-date' | translate}}</div>
         <div class="col-md-2">{{'expiration-date' | translate}}</div>
