Fix style button khi ký HĐ (only mobile)

--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
@@ -75,4 +75,15 @@ input {
   border-radius: 5px; 
 }
 
+.forward-btn-mobile {
+  background: white;
+  border: 1px solid #106DB6;
+  color: #106DB6;
+  width: 114px;
+  height: 30px;
+  border-radius: 7px;
+  cursor: pointer;
+  margin: 5px 5px;
+}
+
 
