--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
@@ -40,20 +40,25 @@
     </div>
   </div>
 </div>
-
+<br>
 <div *ngIf="this.datas.is_data_contract.status == 20 && this.datas.is_data_contract.release_state == 'CON_HIEU_LUC' && this.mobile === true">
   <div class="btn_footer">
     <div class="label">
-      <button *ngIf="!this.is_show_coordination && !view && this.lang" type="button" name="next" class="next action-button" (click)="processingAuthorization()">{{'authorization' | translate}}</button>
-      <button *ngIf="!this.is_show_coordination && !view && this.lang" type="button" name="next" class="next action-button" (click)="forWardContract()">{{'forward' | translate}}</button>
+      <div>
+        <button *ngIf="!this.is_show_coordination && !view && this.lang == 'vi' || !this.lang" (click)="action()" type="button" name="next" class="next action-button" [ngStyle]="getStyleButton()">{{this.datas.action_title == 'dieu_phoi' ? 'Điều phối' : 'Xác nhận'}}</button>
+      </div>
+      <button *ngIf="!this.is_show_coordination && !view && !this.lang" type="button" name="next" class="next forward-btn-mobile" (click)="processingAuthorization()">{{'Uỷ quyền' | translate}}</button>
+      <button *ngIf="!this.is_show_coordination && !view && !this.lang" type="button" name="next" class="next forward-btn-mobile" (click)="forWardContract()">{{'Chuyển tiếp' | translate}}</button>
 
-      <button *ngIf="!this.is_show_coordination && !view && !this.lang" type="button" name="next" class="next action-button" (click)="processingAuthorization()">{{'Uỷ quyền' | translate}}</button>
-      <button *ngIf="!this.is_show_coordination && !view && !this.lang" type="button" name="next" class="next action-button" (click)="forWardContract()">{{'Chuyển tiếp' | translate}}</button>
+      <!-- ========================================== -->
+      <div>
+        <button *ngIf="!this.is_show_coordination && !view && this.lang == 'en'" (click)="action()" type="button" name="next" class="next action-button" [ngStyle]="getStyleButton()">{{this.datas.action_title == 'dieu_phoi' ? 'Coordinator' : 'confirm' | translate}}</button>
+      </div>
+      <button *ngIf="!this.is_show_coordination && !view && this.lang" type="button" name="next" class="next forward-btn-mobile" (click)="processingAuthorization()">{{'authorization' | translate}}</button>
+      <button *ngIf="!this.is_show_coordination && !view && this.lang" type="button" name="next" class="next forward-btn-mobile" (click)="forWardContract()">{{'forward' | translate}}</button>
       
       <button *ngIf="!this.is_show_coordination && ![2,3,4].includes(this.datas.roleContractReceived) && !view" type="button" name="next" class="next action-button" (click)="refuseContract()" [ngStyle]="getStyleButton()">{{'contract.status.fail' | translate}}</button>
-      <button *ngIf="!this.is_show_coordination && !view && this.lang == 'vi' || !this.lang" (click)="action()" type="button" name="next" class="next action-button" [ngStyle]="getStyleButton()">{{this.datas.action_title == 'dieu_phoi' ? 'Điều phối' : 'Xác nhận'}}</button>
 
-      <button *ngIf="!this.is_show_coordination && !view && this.lang == 'en'" (click)="action()" type="button" name="next" class="next action-button" [ngStyle]="getStyleButton()">{{this.datas.action_title == 'dieu_phoi' ? 'Coordinator' : 'Confirm'}}</button>
 
     </div>
   </div>
