fix bug back lại hiện loading form hợp đồng theo lô

--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
@@ -120,7 +120,7 @@
               <img  width="16px" height="20px" *ngIf="!this.page1" src="assets/img/firstpage.svg">
               <img  width="16px" height="20px" *ngIf="this.page1" src="assets/img/previousbold.svg">
             </button>
-            <button style="margin-right: 5px;" class="call-page1" (click)="previousPage()">
+            <button style="margin-right: 5px;" class="call-page1" (click)="previousPagePdf()">
               <img width="12px" height="16px" *ngIf="this.page1" src="assets/img/firstpagebold.svg">
               <img width="12px" height="16px" *ngIf="!this.page1" src="assets/img/previous.svg">
             </button>
