quá hạn cho phép gia hạn ngày hết hạn ký

--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -232,8 +232,13 @@
 
                 <!--Cột 3: Ngày hết hạn ký-->
                 <div class="col-md-2 calendar_deadline">
-                    <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.sign_time | date:
-                            'dd/MM/yyyy'}}</span></div>
+                    <div style="display: flex; justify-content: center;">
+                        <div class="div_icon"><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.sign_time | date:
+                                'dd/MM/yyyy'}}</span></div>
+                        <!--34: quá hạn cho phép sửa ngay hết hạn-->
+                        <div *ngIf="this.filter_status == 34" class="div_icon"><img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'edit.exp.sign.time' | translate}}" (click)="openEditExpiration(item)" />
+                        </div>
+                    </div>
                 </div>
 
                 <!--Cột 4: Thao tác-->
